--- a/style.css
+++ b/style.css
@@ -489,7 +489,7 @@ body {
   display: inline-block;
   vertical-align: top;
   width: 100%;
-  margin: 20px 30px 0 0;
+  margin: 20px 30px 20px 0;
 }
 .container__text {
   display: inline-block;
@@ -503,40 +503,9 @@ body {
   border: 1px solid #2f1728;
   border-radius: 20px;
 }
-@media only screen and (max-width: 320px) {
-  #about-container h2 {
-    font-size: 3.125em;
-  }
+@media screen and (max-width: 425px) {
   #about-container h2:after {
-    content: "";
-    display: block;
-    width: 35%;
-    border-bottom: 1px solid #2f1728;
-    margin: 8px auto;
-  }
-}
-@media only screen and (max-width: 375px) {
-  #about-container h2 {
-    font-size: 3.125em;
-  }
-  #about-container h2:after {
-    content: "";
-    display: block;
-    width: 38%;
-    border-bottom: 1px solid #2f1728;
-    margin: 8px auto;
-  }
-}
-@media only screen and (min-width: 375px) and (max-width: 425px) {
-  #about-container h2 {
-    font-size: 3.125em;
-  }
-  #about-container h2:after {
-    content: "";
-    display: block;
-    width: 40%;
-    border-bottom: 1px solid #2f1728;
-    margin: 8px auto;
+    width: 15%;
   }
 }
 @media only screen and (max-width: 768px) and (min-width: 425px) {
@@ -546,7 +515,7 @@ body {
   #about-container h2:after {
     content: "";
     display: block;
-    width: 20%;
+    width: 10%;
     border-bottom: 1px solid #2f1728;
     margin: 8px auto;
   }
@@ -565,7 +534,7 @@ body {
     padding: 20px;
   }
   .contain {
-    padding: 0 30px 20px;
+    padding: 0 30px 21px;
     align-content: center;
     justify-content: space-evenly;
     text-align: center;
@@ -710,13 +679,14 @@ body {
     padding: 2rem 0 0 0;
   }
   .wrapper h1 {
-    font-size: 2.125em;
+    font-size: 3.125em;
     line-height: 1;
+    margin: 20px 0;
   }
   .wrapper p {
-    font-size: 1.5em;
+    font-size: 2em;
     line-height: 2.5;
-    margin-bottom: 1rem;
+    margin: 1rem;
     color: #2f1728;
   }
   .cards-grid-item {
@@ -729,11 +699,11 @@ body {
     padding: 2rem 0 0 0;
   }
   .wrapper h1 {
-    font-size: 2.125em;
+    font-size: 3.125em;
     line-height: 1;
   }
   .wrapper p {
-    font-size: 1.5em;
+    font-size: 2em;
     line-height: 2.5;
     margin-bottom: 1rem;
     color: #2f1728;
@@ -748,13 +718,14 @@ body {
     padding: 2rem 0 0 0;
   }
   .wrapper h1 {
-    font-size: 2.125em;
+    font-size: 3.125em;
     line-height: 1;
+    margin: 20px 0;
   }
   .wrapper p {
-    font-size: 1.5em;
+    font-size: 2em;
     line-height: 2.5;
-    margin-bottom: 1rem;
+    margin: 1rem;
     color: #2f1728;
   }
   .cards-grid-item {
@@ -855,6 +826,11 @@ body {
 /* ***************************** */
 /* GALLERY MEDIA QUERIES SECTION */
 /* ***************************** */
+@media screen and (min-width: 320px) {
+  .section.gallery .filters {
+    font-size: 20px;
+  }
+}
 @media only screen and (max-width: 320px) {
   .section {
     font-size: 1.3rem;
@@ -1024,6 +1000,13 @@ body {
   text-transform: uppercase;
   padding: 20px 0;
 }
+#contact-box h1:after {
+  content: "";
+  display: block;
+  width: 15%;
+  border-bottom: 1px solid #2f1728;
+  margin: 8px auto;
+}
 #contact-box h3 {
   font-size: 1.125em;
 }
@@ -1084,7 +1067,7 @@ body {
     font-size: 3.125em;
   }
   #contact-box h3 {
-    font-size: 2em;
+    font-size: 3em;
   }
   .mobile-details,
   .fas {
@@ -1116,7 +1099,7 @@ body {
     font-size: 3.125em;
   }
   #contact-box h3 {
-    font-size: 2em;
+    font-size: 3em;
   }
   .mobile-details,
   .fas {
@@ -1145,7 +1128,7 @@ body {
     font-size: 3.125em;
   }
   #contact-box h3 {
-    font-size: 2.825em;
+    font-size: 3em;
     padding-bottom: 10px;
   }
   #contact-box p,
@@ -1182,7 +1165,7 @@ body {
     font-size: 4.125em;
   }
   #contact-box h3 {
-    font-size: 2.825em;
+    font-size: 3em;
     padding-bottom: 10px;
   }
   #contact-box p,
@@ -1296,7 +1279,7 @@ body {
 }
 
 .footer-distributed .footer-company-name {
-  color: #222;
+  color: #e3425b;
   font-size: 14px;
   font-weight: normal;
   margin: 0;
