--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   width: 100%;
   background-color: #fff5d7;
   -webkit-tap-highlight-color: transparent;
+  scroll-behavior: smooth;
 }
 * {
   padding: 0;
